syntax = "proto3";

package umsclient;

option go_package = "./umsclient";

message MemberAddReq {
  string      Username = 1;
  string      Password = 2;
  string      Phone = 3;
}

message MemberAddResp {
  string Token = 1;
}

message MemberLoginReq {
  string      Username = 1;
  string      Password = 2;
  string      Phone = 3;
  string      Ip = 4;
}

message MemberLoginResp {
  string Token = 1;
}

message MemberListReq {
  int64 current = 1;
  int64 pageSize = 2;
  string Username = 3;
  string Phone = 4;
  int64  Status = 5;
}

message MemberListData{
  int64       Id = 1;
  int64       MemberLevelId = 2;
  string      Username = 3;
  string      Password = 4;
  string      Nickname = 5;
  string      Phone = 6;
  int64       Status = 7;
  string      CreateTime = 8;
  string      Icon = 9;
  int64       Gender = 10;
  string      Birthday = 11;
  string      City = 12;
  string      Job = 13;
  string      PersonalizedSignature = 14;
  int64       SourceType = 15;
  int64       Integration = 16;
  int64       Growth = 17;
  int64       LuckeyCount = 18;
  int64       HistoryIntegration = 19;
}

message MemberListResp {
  int64 total = 1;
  repeated  MemberListData list = 2;
}

message MemberUpdateReq {
  int64       Id = 1;
  int64       MemberLevelId = 2;
  string      Username = 3;
  string      Password = 4;
  string      Nickname = 5;
  string      Phone = 6;
  int64       Status = 7;
  string      CreateTime = 8;
  string      Icon = 9;
  int64       Gender = 10;
  string      Birthday = 11;
  string      City = 12;
  string      Job = 13;
  string      PersonalizedSignature = 14;
  int64       SourceType = 15;
  int64       Integration = 16;
  int64       Growth = 17;
  int64       LuckeyCount = 18;
  int64       HistoryIntegration = 19;
}

message MemberUpdateResp {
  string pong = 1;
}

message MemberDeleteReq {
  repeated int64 ids = 1;
}

message MemberDeleteResp {
  string pong = 1;
}

message MemberByIdReq {
  int64 id = 1;
}

message MemberUpdatePasswordReq {
  int64       Id = 1;
  string      Password = 2;
}
service MemberService {

  rpc MemberAdd(MemberAddReq) returns(MemberAddResp);
  rpc MemberLogin(MemberLoginReq) returns(MemberLoginResp);
  rpc MemberList(MemberListReq) returns(MemberListResp);
  rpc MemberUpdate(MemberUpdateReq) returns(MemberUpdateResp);
  rpc MemberDelete(MemberDeleteReq) returns(MemberDeleteResp);
  rpc QueryMemberById(MemberByIdReq) returns(MemberListData);
  rpc MemberUpdatePassword(MemberUpdatePasswordReq) returns(MemberUpdateResp);

}

message GrowthChangeHistoryAddReq {
  int64      MemberId = 2;
  string      CreateTime = 3;
  int64      ChangeType = 4;
  int64      ChangeCount = 5;
  string      OperateMan = 6;
  string      OperateNote = 7;
  int64      SourceType = 8;
}

message GrowthChangeHistoryAddResp {
  string pong = 1;
}

message GrowthChangeHistoryListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message GrowthChangeHistoryListData{
  int64      Id = 1;
  int64      MemberId = 2;
  string      CreateTime = 3;
  int64      ChangeType = 4;
  int64      ChangeCount = 5;
  string      OperateMan = 6;
  string      OperateNote = 7;
  int64      SourceType = 8;
}

message GrowthChangeHistoryListResp {
  int64 total = 1;
  repeated  GrowthChangeHistoryListData list = 2;
}

message GrowthChangeHistoryUpdateReq {
  int64      Id = 1;
  int64      MemberId = 2;
  string      CreateTime = 3;
  int64      ChangeType = 4;
  int64      ChangeCount = 5;
  string      OperateMan = 6;
  string      OperateNote = 7;
  int64      SourceType = 8;
}

message GrowthChangeHistoryUpdateResp {
  string pong = 1;
}

message GrowthChangeHistoryDeleteReq {
  repeated int64 ids = 1;
}

message GrowthChangeHistoryDeleteResp {
  string pong = 1;
}

service GrowthChangeHistoryService {

  rpc GrowthChangeHistoryAdd(GrowthChangeHistoryAddReq) returns(GrowthChangeHistoryAddResp);
  rpc GrowthChangeHistoryList(GrowthChangeHistoryListReq) returns(GrowthChangeHistoryListResp);
  rpc GrowthChangeHistoryUpdate(GrowthChangeHistoryUpdateReq) returns(GrowthChangeHistoryUpdateResp);
  rpc GrowthChangeHistoryDelete(GrowthChangeHistoryDeleteReq) returns(GrowthChangeHistoryDeleteResp);
}

message IntegrationChangeHistoryAddReq {
  int64      MemberId = 2;
  string  CreateTime = 3;
  int64      ChangeType = 4;
  int64      ChangeCount = 5;
  string      OperateMan = 6;
  string      OperateNote = 7;
  int64      SourceType = 8;
}

message IntegrationChangeHistoryAddResp {
  string pong = 1;
}

message IntegrationChangeHistoryListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message IntegrationChangeHistoryListData{
  int64      Id = 1;
  int64      MemberId = 2;
  string  CreateTime = 3;
  int64      ChangeType = 4;
  int64      ChangeCount = 5;
  string      OperateMan = 6;
  string      OperateNote = 7;
  int64      SourceType = 8;
}

message IntegrationChangeHistoryListResp {
  int64 total = 1;
  repeated  IntegrationChangeHistoryListData list = 2;
}

message IntegrationChangeHistoryUpdateReq {
  int64      Id = 1;
  int64      MemberId = 2;
  string  CreateTime = 3;
  int64      ChangeType = 4;
  int64      ChangeCount = 5;
  string      OperateMan = 6;
  string      OperateNote = 7;
  int64      SourceType = 8;
}

message IntegrationChangeHistoryUpdateResp {
  string pong = 1;
}

message IntegrationChangeHistoryDeleteReq {
  repeated int64 ids = 1;
}

message IntegrationChangeHistoryDeleteResp {
  string pong = 1;
}
service IntegrationChangeHistoryService {

  rpc IntegrationChangeHistoryAdd(IntegrationChangeHistoryAddReq) returns(IntegrationChangeHistoryAddResp);
  rpc IntegrationChangeHistoryList(IntegrationChangeHistoryListReq) returns(IntegrationChangeHistoryListResp);
  rpc IntegrationChangeHistoryUpdate(IntegrationChangeHistoryUpdateReq) returns(IntegrationChangeHistoryUpdateResp);
  rpc IntegrationChangeHistoryDelete(IntegrationChangeHistoryDeleteReq) returns(IntegrationChangeHistoryDeleteResp);

}

message IntegrationConsumeSettingAddReq {
  int64  DeductionPerAmount = 2;
  int64  MaxPercentPerOrder = 3;
  int64  UseUnit = 4;
  int64  CouponStatus = 5;
}

message IntegrationConsumeSettingAddResp {
  string pong = 1;
}

message IntegrationConsumeSettingListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message IntegrationConsumeSettingListData{
  int64  Id = 1;
  int64  DeductionPerAmount = 2;
  int64  MaxPercentPerOrder = 3;
  int64  UseUnit = 4;
  int64  CouponStatus = 5;
}

message IntegrationConsumeSettingListResp {
  int64 total = 1;
  repeated  IntegrationConsumeSettingListData list = 2;
}

message IntegrationConsumeSettingUpdateReq {
  int64  Id = 1;
  int64  DeductionPerAmount = 2;
  int64  MaxPercentPerOrder = 3;
  int64  UseUnit = 4;
  int64  CouponStatus = 5;
}

message IntegrationConsumeSettingUpdateResp {
  string pong = 1;
}

message IntegrationConsumeSettingDeleteReq {
  repeated int64 ids = 1;
}

message IntegrationConsumeSettingDeleteResp {
  string pong = 1;
}
service IntegrationConsumeSettingService {

  rpc IntegrationConsumeSettingAdd(IntegrationConsumeSettingAddReq) returns(IntegrationConsumeSettingAddResp);
  rpc IntegrationConsumeSettingList(IntegrationConsumeSettingListReq) returns(IntegrationConsumeSettingListResp);
  rpc IntegrationConsumeSettingUpdate(IntegrationConsumeSettingUpdateReq) returns(IntegrationConsumeSettingUpdateResp);
  rpc IntegrationConsumeSettingDelete(IntegrationConsumeSettingDeleteReq) returns(IntegrationConsumeSettingDeleteResp);

}

message MemberLevelAddReq {
  string    Name = 2;
  int64    GrowthPoint = 3;
  int64    DefaultStatus = 4;
  int64  FreeFreightPoint = 5;
  int64    CommentGrowthPoint = 6;
  int64    PriviledgeFreeFreight = 7;
  int64    PriviledgeSignIn = 8;
  int64    PriviledgeComment = 9;
  int64    PriviledgePromotion = 10;
  int64    PriviledgeMemberPrice = 11;
  int64    PriviledgeBirthday = 12;
  string    Note = 13;
}

message MemberLevelAddResp {
  string pong = 1;
}

message MemberLevelListReq {
  int64 current = 1;
  int64 pageSize = 2;
  string Name = 3;
}

message MemberLevelListData{
  int64    Id = 1;
  string    Name = 2;
  int64    GrowthPoint = 3;
  int64    DefaultStatus = 4;
  int64  FreeFreightPoint = 5;
  int64    CommentGrowthPoint = 6;
  int64    PriviledgeFreeFreight = 7;
  int64    PriviledgeSignIn = 8;
  int64    PriviledgeComment = 9;
  int64    PriviledgePromotion = 10;
  int64    PriviledgeMemberPrice = 11;
  int64    PriviledgeBirthday = 12;
  string    Note = 13;
}

message MemberLevelListResp {
  int64 total = 1;
  repeated  MemberLevelListData list = 2;
}

message MemberLevelUpdateReq {
  int64    Id = 1;
  string    Name = 2;
  int64    GrowthPoint = 3;
  int64    DefaultStatus = 4;
  int64  FreeFreightPoint = 5;
  int64    CommentGrowthPoint = 6;
  int64    PriviledgeFreeFreight = 7;
  int64    PriviledgeSignIn = 8;
  int64    PriviledgeComment = 9;
  int64    PriviledgePromotion = 10;
  int64    PriviledgeMemberPrice = 11;
  int64    PriviledgeBirthday = 12;
  string    Note = 13;
}

message MemberLevelUpdateResp {
  string pong = 1;
}

message MemberLevelDeleteReq {
  repeated int64 ids = 1;
}

message MemberLevelDeleteResp {
  string pong = 1;
}
service MemberLevelService {

  rpc MemberLevelAdd(MemberLevelAddReq) returns(MemberLevelAddResp);
  rpc MemberLevelList(MemberLevelListReq) returns(MemberLevelListResp);
  rpc MemberLevelUpdate(MemberLevelUpdateReq) returns(MemberLevelUpdateResp);
  rpc MemberLevelDelete(MemberLevelDeleteReq) returns(MemberLevelDeleteResp);

}
message MemberLoginLogAddReq {
  int64      MemberId = 2;
  string  CreateTime = 3;
  string      Ip = 4;
  string      City = 5;
  int64      LoginType = 6;
  string      Province = 7;
}

message MemberLoginLogAddResp {
  string pong = 1;
}

message MemberLoginLogListReq {
  int64 current = 1;
  int64 pageSize = 2;
  int64 MemberId = 3;
}

message MemberLoginLogListData{
  int64      Id = 1;
  int64      MemberId = 2;
  string  CreateTime = 3;
  string      Ip = 4;
  string      City = 5;
  int64      LoginType = 6;
  string      Province = 7;
}

message MemberLoginLogListResp {
  int64 total = 1;
  repeated  MemberLoginLogListData list = 2;
}

message MemberLoginLogUpdateReq {
  int64      Id = 1;
  int64      MemberId = 2;
  string  CreateTime = 3;
  string      Ip = 4;
  string      City = 5;
  int64      LoginType = 6;
  string      Province = 7;
}

message MemberLoginLogUpdateResp {
  string pong = 1;
}

message MemberLoginLogDeleteReq {
  repeated int64 ids = 1;
}

message MemberLoginLogDeleteResp {
  string pong = 1;
}
service MemberLoginLogService {

  rpc MemberLoginLogAdd(MemberLoginLogAddReq) returns(MemberLoginLogAddResp);
  rpc MemberLoginLogList(MemberLoginLogListReq) returns(MemberLoginLogListResp);
  rpc MemberLoginLogUpdate(MemberLoginLogUpdateReq) returns(MemberLoginLogUpdateResp);
  rpc MemberLoginLogDelete(MemberLoginLogDeleteReq) returns(MemberLoginLogDeleteResp);

}
message MemberMemberTagRelationAddReq {
  int64  MemberId = 2;
  int64  TagId = 3;
}

message MemberMemberTagRelationAddResp {
  string pong = 1;
}

message MemberMemberTagRelationListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberMemberTagRelationListData{
  int64  Id = 1;
  int64  MemberId = 2;
  int64  TagId = 3;
}

message MemberMemberTagRelationListResp {
  int64 total = 1;
  repeated  MemberMemberTagRelationListData list = 2;
}

message MemberMemberTagRelationUpdateReq {
  int64  Id = 1;
  int64  MemberId = 2;
  int64  TagId = 3;
}

message MemberMemberTagRelationUpdateResp {
  string pong = 1;
}

message MemberMemberTagRelationDeleteReq {
  repeated int64 ids = 1;
}

message MemberMemberTagRelationDeleteResp {
  string pong = 1;
}
service MemberMemberTagRelationService {

  rpc MemberMemberTagRelationAdd(MemberMemberTagRelationAddReq) returns(MemberMemberTagRelationAddResp);
  rpc MemberMemberTagRelationList(MemberMemberTagRelationListReq) returns(MemberMemberTagRelationListResp);
  rpc MemberMemberTagRelationUpdate(MemberMemberTagRelationUpdateReq) returns(MemberMemberTagRelationUpdateResp);
  rpc MemberMemberTagRelationDelete(MemberMemberTagRelationDeleteReq) returns(MemberMemberTagRelationDeleteResp);

}
message MemberProductCategoryRelationAddReq {
  int64  MemberId = 2;
  int64  ProductCategoryId = 3;
}

message MemberProductCategoryRelationAddResp {
  string pong = 1;
}

message MemberProductCategoryRelationListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberProductCategoryRelationListData{
  int64  Id = 1;
  int64  MemberId = 2;
  int64  ProductCategoryId = 3;
}

message MemberProductCategoryRelationListResp {
  int64 total = 1;
  repeated  MemberProductCategoryRelationListData list = 2;
}

message MemberProductCategoryRelationUpdateReq {
  int64  Id = 1;
  int64  MemberId = 2;
  int64  ProductCategoryId = 3;
}

message MemberProductCategoryRelationUpdateResp {
  string pong = 1;
}

message MemberProductCategoryRelationDeleteReq {
  repeated int64 ids = 1;
}

message MemberProductCategoryRelationDeleteResp {
  string pong = 1;
}

service MemberProductCategoryRelationService {

  rpc MemberProductCategoryRelationAdd(MemberProductCategoryRelationAddReq) returns(MemberProductCategoryRelationAddResp);
  rpc MemberProductCategoryRelationList(MemberProductCategoryRelationListReq) returns(MemberProductCategoryRelationListResp);
  rpc MemberProductCategoryRelationUpdate(MemberProductCategoryRelationUpdateReq) returns(MemberProductCategoryRelationUpdateResp);
  rpc MemberProductCategoryRelationDelete(MemberProductCategoryRelationDeleteReq) returns(MemberProductCategoryRelationDeleteResp);


}
message MemberReceiveAddressAddReq {
  int64    MemberId = 2;
  string  Name = 3;
  string  PhoneNumber = 4;
  int64    DefaultStatus = 5;
  string  PostCode = 6;
  string  Province = 7;
  string  City = 8;
  string  Region = 9;
  string  DetailAddress = 10;
}

message MemberReceiveAddressAddResp {
  string pong = 1;
}

message MemberReceiveAddressListReq {
  int64 current = 1;
  int64 pageSize = 2;
  int64 MemberId = 3;
}

message MemberReceiveAddressListData{
  int64    Id = 1;
  int64    MemberId = 2;
  string  Name = 3;
  string  PhoneNumber = 4;
  int64    DefaultStatus = 5;
  string  PostCode = 6;
  string  Province = 7;
  string  City = 8;
  string  Region = 9;
  string  DetailAddress = 10;
}

message MemberReceiveAddressListResp {
  int64 total = 1;
  repeated  MemberReceiveAddressListData list = 2;
}

message MemberReceiveAddressUpdateReq {
  int64    Id = 1;
  int64    MemberId = 2;
  string  Name = 3;
  string  PhoneNumber = 4;
  int64    DefaultStatus = 5;
  string  PostCode = 6;
  string  Province = 7;
  string  City = 8;
  string  Region = 9;
  string  DetailAddress = 10;
}

message MemberReceiveAddressUpdateResp {
  string pong = 1;
}

message MemberReceiveAddressDeleteReq {
  repeated int64 ids = 1;
  int64    MemberId = 2;
}

message MemberReceiveAddressDeleteResp {
  string pong = 1;
}


service MemberReceiveAddressService {

  rpc MemberReceiveAddressAdd(MemberReceiveAddressAddReq) returns(MemberReceiveAddressAddResp);
  rpc MemberReceiveAddressList(MemberReceiveAddressListReq) returns(MemberReceiveAddressListResp);
  rpc MemberReceiveAddressUpdate(MemberReceiveAddressUpdateReq) returns(MemberReceiveAddressUpdateResp);
  rpc MemberReceiveAddressDelete(MemberReceiveAddressDeleteReq) returns(MemberReceiveAddressDeleteResp);
  rpc MemberReceiveAddressQueryDetail(MemberReceiveAddressQueryDetailReq) returns(MemberReceiveAddressQueryDetailResp);

}
message MemberReceiveAddressQueryDetailReq {
  int64 UserId = 1;
  int64 AddressID = 2;
}

message MemberReceiveAddressQueryDetailResp {
  int64    Id = 1;
  int64    MemberId = 2;
  string  Name = 3;
  string  PhoneNumber = 4;
  int64    DefaultStatus = 5;
  string  PostCode = 6;
  string  Province = 7;
  string  City = 8;
  string  Region = 9;
  string  DetailAddress = 10;
}

message MemberRuleSettingAddReq {
  int64    ContinueSignDay = 2;
  int64    ContinueSignPoint = 3;
  int64  ConsumePerPoint = 4;
  int64  LowOrderAmount = 5;
  int64    MaxPointPerOrder = 6;
  int64    Type = 7;
}

message MemberRuleSettingAddResp {
  string pong = 1;
}

message MemberRuleSettingListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberRuleSettingListData{
  int64    Id = 1;
  int64    ContinueSignDay = 2;
  int64    ContinueSignPoint = 3;
  int64  ConsumePerPoint = 4;
  int64  LowOrderAmount = 5;
  int64    MaxPointPerOrder = 6;
  int64    Type = 7;
}

message MemberRuleSettingListResp {
  int64 total = 1;
  repeated  MemberRuleSettingListData list = 2;
}

message MemberRuleSettingUpdateReq {
  int64    Id = 1;
  int64    ContinueSignDay = 2;
  int64    ContinueSignPoint = 3;
  int64  ConsumePerPoint = 4;
  int64  LowOrderAmount = 5;
  int64    MaxPointPerOrder = 6;
  int64    Type = 7;
}

message MemberRuleSettingUpdateResp {
  string pong = 1;
}

message MemberRuleSettingDeleteReq {
  repeated int64 ids = 1;
}

message MemberRuleSettingDeleteResp {
  string pong = 1;
}
service MemberRuleSettingService {

  rpc MemberRuleSettingAdd(MemberRuleSettingAddReq) returns(MemberRuleSettingAddResp);
  rpc MemberRuleSettingList(MemberRuleSettingListReq) returns(MemberRuleSettingListResp);
  rpc MemberRuleSettingUpdate(MemberRuleSettingUpdateReq) returns(MemberRuleSettingUpdateResp);
  rpc MemberRuleSettingDelete(MemberRuleSettingDeleteReq) returns(MemberRuleSettingDeleteResp);


}
message MemberStatisticsInfoAddReq {
  int64      MemberId = 2;
  int64    ConsumeAmount = 3;
  int64      OrderCount = 4;
  int64      CouponCount = 5;
  int64      CommentCount = 6;
  int64      ReturnOrderCount = 7;
  int64      LoginCount = 8;
  int64      AttendCount = 9;
  int64      FansCount = 10;
  int64      CollectProductCount = 11;
  int64      CollectSubjectCount = 12;
  int64      CollectTopicCount = 13;
  int64      CollectCommentCount = 14;
  int64      InviteFriendCount = 15;
  string  RecentOrderTime = 16;
}

message MemberStatisticsInfoAddResp {
  string pong = 1;
}

message MemberStatisticsInfoListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberStatisticsInfoListData{
  int64      Id = 1;
  int64      MemberId = 2;
  int64    ConsumeAmount = 3;
  int64      OrderCount = 4;
  int64      CouponCount = 5;
  int64      CommentCount = 6;
  int64      ReturnOrderCount = 7;
  int64      LoginCount = 8;
  int64      AttendCount = 9;
  int64      FansCount = 10;
  int64      CollectProductCount = 11;
  int64      CollectSubjectCount = 12;
  int64      CollectTopicCount = 13;
  int64      CollectCommentCount = 14;
  int64      InviteFriendCount = 15;
  string  RecentOrderTime = 16;
}

message MemberStatisticsInfoListResp {
  int64 total = 1;
  repeated  MemberStatisticsInfoListData list = 2;
}

message MemberStatisticsInfoUpdateReq {
  int64      Id = 1;
  int64      MemberId = 2;
  int64    ConsumeAmount = 3;
  int64      OrderCount = 4;
  int64      CouponCount = 5;
  int64      CommentCount = 6;
  int64      ReturnOrderCount = 7;
  int64      LoginCount = 8;
  int64      AttendCount = 9;
  int64      FansCount = 10;
  int64      CollectProductCount = 11;
  int64      CollectSubjectCount = 12;
  int64      CollectTopicCount = 13;
  int64      CollectCommentCount = 14;
  int64      InviteFriendCount = 15;
  string  RecentOrderTime = 16;
}

message MemberStatisticsInfoUpdateResp {
  string pong = 1;
}

message MemberStatisticsInfoDeleteReq {
  repeated int64 ids = 1;
}

message MemberStatisticsInfoDeleteResp {
  string pong = 1;
}

service MemberStatisticsInfoService {

  rpc MemberStatisticsInfoAdd(MemberStatisticsInfoAddReq) returns(MemberStatisticsInfoAddResp);
  rpc MemberStatisticsInfoList(MemberStatisticsInfoListReq) returns(MemberStatisticsInfoListResp);
  rpc MemberStatisticsInfoUpdate(MemberStatisticsInfoUpdateReq) returns(MemberStatisticsInfoUpdateResp);
  rpc MemberStatisticsInfoDelete(MemberStatisticsInfoDeleteReq) returns(MemberStatisticsInfoDeleteResp);

}
message MemberTagAddReq {
  string    Name = 2;
  int64    FinishOrderCount = 3;
  int64  FinishOrderAmount = 4;
}

message MemberTagAddResp {
  string pong = 1;
}

message MemberTagListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberTagListData{
  int64    Id = 1;
  string    Name = 2;
  int64    FinishOrderCount = 3;
  int64  FinishOrderAmount = 4;
}

message MemberTagListResp {
  int64 total = 1;
  repeated  MemberTagListData list = 2;
}

message MemberTagUpdateReq {
  int64    Id = 1;
  string    Name = 2;
  int64    FinishOrderCount = 3;
  int64  FinishOrderAmount = 4;
}

message MemberTagUpdateResp {
  string pong = 1;
}

message MemberTagDeleteReq {
  repeated int64 ids = 1;
}

message MemberTagDeleteResp {
  string pong = 1;
}

service MemberTagService {


  rpc MemberTagAdd(MemberTagAddReq) returns(MemberTagAddResp);
  rpc MemberTagList(MemberTagListReq) returns(MemberTagListResp);
  rpc MemberTagUpdate(MemberTagUpdateReq) returns(MemberTagUpdateResp);
  rpc MemberTagDelete(MemberTagDeleteReq) returns(MemberTagDeleteResp);

}
message MemberTaskAddReq {
  string  Name = 2;
  int64    Growth = 3;
  int64    Intergration = 4;
  int64    Type = 5;
}

message MemberTaskAddResp {
  string pong = 1;
}

message MemberTaskListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberTaskListData{
  int64    Id = 1;
  string  Name = 2;
  int64    Growth = 3;
  int64    Intergration = 4;
  int64    Type = 5;
}

message MemberTaskListResp {
  int64 total = 1;
  repeated  MemberTaskListData list = 2;
}

message MemberTaskUpdateReq {
  int64    Id = 1;
  string  Name = 2;
  int64    Growth = 3;
  int64    Intergration = 4;
  int64    Type = 5;
}

message MemberTaskUpdateResp {
  string pong = 1;
}

message MemberTaskDeleteReq {
  repeated int64 ids = 1;
}

message MemberTaskDeleteResp {
  string pong = 1;
}
service MemberTaskService {

  rpc MemberTaskAdd(MemberTaskAddReq) returns(MemberTaskAddResp);
  rpc MemberTaskList(MemberTaskListReq) returns(MemberTaskListResp);
  rpc MemberTaskUpdate(MemberTaskUpdateReq) returns(MemberTaskUpdateResp);
  rpc MemberTaskDelete(MemberTaskDeleteReq) returns(MemberTaskDeleteResp);

}
//用户收藏
message MemberProductCollectionAddReq {
  int64 Id = 1; //编号
  int64 MemberId = 2; //会员id
  string MemberNickName = 3; //会员姓名
  string MemberIcon = 4; //会员头像
  int64 ProductId = 5; //商品id
  string ProductName = 6; //商品名称
  string ProductPic = 7; //商品图片
  string ProductSubTitle = 8; //商品标题
  double ProductPrice = 9; //商品价格
  string CreateTime = 10; //收藏时间

}

message MemberProductCollectionAddResp {
  string pong = 1;
}

message MemberProductCollectionDeleteReq {
  repeated int64 ids = 1;
  int64 MemberId = 2; //会员id
}

message MemberProductCollectionDeleteResp {
  string pong = 1;
}

message MemberProductCollectionUpdateReq {
  int64 Id = 1; //编号
  int64 MemberId = 2; //会员id
  string MemberNickName = 3; //会员姓名
  string MemberIcon = 4; //会员头像
  int64 ProductId = 5; //商品id
  string ProductName = 6; //商品名称
  string ProductPic = 7; //商品图片
  string ProductSubTitle = 8; //商品标题
  double ProductPrice = 9; //商品价格
  string CreateTime = 10; //收藏时间

}

message MemberProductCollectionUpdateResp {
  string pong = 1;
}

message MemberProductCollectionListReq {
  int64 current = 1;
  int64 pageSize = 2;
  int64 MemberId = 3; //会员id
  int64 ProductId = 4; //商品id

}

message MemberProductCollectionListData {
  int64 Id = 1; //编号
  int64 MemberId = 2; //会员id
  string MemberNickName = 3; //会员姓名
  string MemberIcon = 4; //会员头像
  int64 ProductId = 5; //商品id
  string ProductName = 6; //商品名称
  string ProductPic = 7; //商品图片
  string ProductSubTitle = 8; //商品标题
  double ProductPrice = 9; //商品价格
  string CreateTime = 10; //收藏时间

}

message MemberProductCollectionListResp {
  int64 total = 1;
  repeated  MemberProductCollectionListData list = 2;
}
service MemberProductCollectionService {

  rpc MemberProductCollectionAdd(MemberProductCollectionAddReq) returns (MemberProductCollectionAddResp){}
  rpc MemberProductCollectionDelete(MemberProductCollectionDeleteReq) returns (MemberProductCollectionDeleteResp){}
  rpc MemberProductCollectionUpdate(MemberProductCollectionUpdateReq) returns (MemberProductCollectionUpdateResp){}
  rpc MemberProductCollectionList(MemberProductCollectionListReq) returns (MemberProductCollectionListResp){}

}

//用户浏览记录
message MemberReadHistoryAddReq {
  int64 Id = 1; //编号
  int64 MemberId = 2; //会员id
  string MemberNickName = 3; //会员姓名
  string MemberIcon = 4; //会员头像
  int64 ProductId = 5; //商品id
  string ProductName = 6; //商品名称
  string ProductPic = 7; //商品图片
  string ProductSubTitle = 8; //商品标题
  double ProductPrice = 9; //商品价格
  string CreateTime = 10; //浏览时间

}

message MemberReadHistoryAddResp {
  string pong = 1;
}

message MemberReadHistoryDeleteReq {
  repeated int64 ids = 1;
  int64 MemberId = 2; //会员id
}

message MemberReadHistoryDeleteResp {
  string pong = 1;
}

message MemberReadHistoryUpdateReq {
  int64 Id = 1; //编号
  int64 MemberId = 2; //会员id
  string MemberNickName = 3; //会员姓名
  string MemberIcon = 4; //会员头像
  int64 ProductId = 5; //商品id
  string ProductName = 6; //商品名称
  string ProductPic = 7; //商品图片
  string ProductSubTitle = 8; //商品标题
  double ProductPrice = 9; //商品价格
  string CreateTime = 10; //浏览时间

}

message MemberReadHistoryUpdateResp {
  string pong = 1;
}

message MemberReadHistoryListReq {
  int64 current = 1;
  int64 pageSize = 2;
  int64 MemberId = 3; //会员id

}

message MemberReadHistoryListData {
  int64 Id = 1; //编号
  int64 MemberId = 2; //会员id
  string MemberNickName = 3; //会员姓名
  string MemberIcon = 4; //会员头像
  int64  ProductId = 5; //商品id
  string ProductName = 6; //商品名称
  string ProductPic = 7; //商品图片
  string ProductSubTitle = 8; //商品标题
  double ProductPrice = 9; //商品价格
  string CreateTime = 10; //浏览时间

}

message MemberReadHistoryListResp {
  int64 total = 1;
  repeated  MemberReadHistoryListData list = 2;
}

service MemberReadHistoryService {

  rpc MemberReadHistoryAdd(MemberReadHistoryAddReq) returns (MemberReadHistoryAddResp){}
  rpc MemberReadHistoryDelete(MemberReadHistoryDeleteReq) returns (MemberReadHistoryDeleteResp){}
  rpc MemberReadHistoryUpdate(MemberReadHistoryUpdateReq) returns (MemberReadHistoryUpdateResp){}
  rpc MemberReadHistoryList(MemberReadHistoryListReq) returns (MemberReadHistoryListResp){}
}
